--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.uadaf'
 version '1.0'
 
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.kotlin_version = '1.2.40'
 
     repositories {
         mavenCentral()
@@ -35,6 +35,7 @@ task builddep(type: Jar, dependsOn: classes) {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5"
     compile 'com.jagrosh:jda-utilities:2.1'
     compile 'net.dv8tion:JDA:3.5.1_352'
     compile 'com.google.code.gson:gson:2.8.0'
@@ -45,6 +46,7 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.25'
     compile 'com.github.davidmoten:rxjava2-extras:0.1.20'
     compile 'com.sparkjava:spark-core:2.5.5'
+    compile 'de.codecentric.centerdevice:javafxsvg:1.3.0'
 }
 
 
@@ -53,4 +55,10 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
 }
