--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.github.davidmoten:rxjava2-extras:0.1.20'
     compile 'com.sparkjava:spark-core:2.5.5'
     compile 'de.codecentric.centerdevice:javafxsvg:1.3.0'
+    compile 'com.google.cloud:google-cloud-texttospeech:0.41.0-beta'
 }
 
 
