--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.uadaf'
 version '1.0'
 
 buildscript {
-    ext.kotlin_version = '1.2.40'
+    ext.kotlin_version = '1.2.41'
 
     repositories {
         mavenCentral()
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.5.5'
     compile 'de.codecentric.centerdevice:javafxsvg:1.3.0'
     compile 'com.google.cloud:google-cloud-texttospeech:0.41.0-beta'
+    compile 'mysql:mysql-connector-java:5.1.13'
 }
 
 
