--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.5.5'
     compile 'de.codecentric.centerdevice:javafxsvg:1.3.0'
     compile 'mysql:mysql-connector-java:5.1.13'
+    compile 'khttp:khttp:0.1.0'
 }
 
 
