--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'de.codecentric.centerdevice:javafxsvg:1.3.0'
     compile 'mysql:mysql-connector-java:5.1.13'
     compile 'khttp:khttp:0.1.0'
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 
 
